// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser basic 1`] = `
Object {
  "composesCount": 0,
  "staticCSSRules": Array [],
  "styles": Object {
    ".thing": Object {
      "WebkitBoxPack": "center",
      "display": "-webkit-box; display: -ms-flexbox; display: flex",
      "justifyContent": "center",
      "msFlexPack": "center",
      "width": "var(--css-hash-0)",
    },
  },
}
`;

exports[`parser fancy 1`] = `
Object {
  "composesCount": 0,
  "staticCSSRules": Array [],
  "styles": Object {
    ".some-selector": Object {
      "WebkitBoxPack": "center",
      "display": "-webkit-box; display: -ms-flexbox; display: flex",
      "justifyContent": "center",
      "msFlexPack": "center",
      "width": "var(--css-hash-0)",
    },
    ".some-selector::before": Object {
      "color": "blue",
      "content": "'pseudo'",
      "height": "20px",
      "width": "20px",
    },
    ".some-selector:hover": Object {
      "backgroundColor": "green",
    },
    "@media (max-width: 500px)": Object {
      ".some-selector": Object {
        "height": "var(--css-hash-1)",
        "position": "fixed",
      },
    },
    "@media print": Object {
      ".some-selector": Object {
        "display": "none",
      },
    },
  },
}
`;

exports[`parser static 1`] = `
Object {
  "composesCount": 0,
  "staticCSSRules": Array [
    ".thing {
    display: block;
    height: 50px;
    width: 30px
}",
  ],
  "styles": Object {
    ".thing": Object {
      "display": "block",
      "height": "50px",
      "width": "30px",
    },
  },
}
`;
